--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ So, if you're ready to embark on a journey of self-discovery, innovation, and ar
             </div>     </p>
           <form action="https://api.web3forms.com/submit" method="POST" id=form>
             <div class="py-2">
-              <input type="hidden" name="access_key" value="afc915eb-83c8-4846-ba1c-78f83555136e"> 
+              <input type="hidden" name="access_key" value="df9430b6-bc6d-4e80-9765-097e49c2fb16"> 
               <input type="hidden" name="subject" value="New Submission from Web3Forms" />
             
               <input type="text" name="name" id="first_name" placeholder="full name" required>
@@ -693,7 +693,7 @@ So, if you're ready to embark on a journey of self-discovery, innovation, and ar
             </h4>
             <form action="https://api.web3forms.com/submit" method="POST" id=form>
               <div class="py-2">
-                <input type="hidden" name="access_key" value="afc915eb-83c8-4846-ba1c-78f83555136e"> 
+                <input type="hidden" name="access_key" value="df9430b6-bc6d-4e80-9765-097e49c2fb16"> 
                 <input type="hidden" name="subject" value="New Submission from Web3Forms" />
                 <input type="text" name="name" id="first_name" placeholder="enter Email" required>
               </div>
@@ -711,7 +711,7 @@ So, if you're ready to embark on a journey of self-discovery, innovation, and ar
   <footer class="container-fluid footer_section">
     <p>
       &copy; 2024 All Rights Reserved By
-      <a href="https://buildflow1.github.io/com/">Buildflow</a>
+      <a href="https://buildflowzm.github.io/build/">Buildflow</a>
     </p>
   </footer>
   <!-- footer section -->
