--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
             </h4>
             <form action="https://api.web3forms.com/submit" method="POST" id=form>
               <div class="py-2">
-                <input type="hidden" name="access_key" value="afc915eb-83c8-4846-ba1c-78f83555136e"> 
+                <input type="hidden" name="access_key" value="df9430b6-bc6d-4e80-9765-097e49c2fb16"> 
                 <input type="hidden" name="subject" value="New Submission from Web3Forms" />
                 <input type="text" name="name" id="first_name" placeholder="enter Email" required>
               </div>
@@ -273,7 +273,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; 2024 All Rights Reserved By
-      <a href="https://buildflow1.github.io/com/">BuildFlow</a>
+      <a href="https://buildflowzm.github.io/build/">BuildFlow</a>
     </p>
   </footer>
   <!-- footer section -->
