--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
           </div>
           <form action="https://api.web3forms.com/submit" method="POST" id=form>
             <div class="py-2">
-              <input type="hidden" name="access_key" value="afc915eb-83c8-4846-ba1c-78f83555136e"> 
+              <input type="hidden" name="access_key" value="df9430b6-bc6d-4e80-9765-097e49c2fb16"> 
               <input type="hidden" name="subject" value="New Submission from Web3Forms" />
             
               <input type="text" name="name" id="first_name" placeholder="full name" required>
@@ -266,7 +266,7 @@
             </h4>
             <form action="https://api.web3forms.com/submit" method="POST" id=form>
               <div class="py-2">
-                <input type="hidden" name="access_key" value="afc915eb-83c8-4846-ba1c-78f83555136e"> 
+                <input type="hidden" name="access_key" value="df9430b6-bc6d-4e80-9765-097e49c2fb16"> 
                 <input type="hidden" name="subject" value="New Submission from Web3Forms" />
                 <input type="text" name="name" id="first_name" placeholder="enter Email" required>
               </div>
@@ -284,7 +284,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; 2024 All Rights Reserved By
-      <a href="https://buildflow1.github.io/com/">Buildflow</a>
+      <a href="https://buildflowzm.github.io/build/">Buildflow</a>
     </p>
   </footer>
   <!-- footer section -->
