--- a/contact.html
+++ b/contact.html
@@ -224,7 +224,7 @@
             <div>
               <img src="images/envelope.png" alt="" />
               <p>
-                paloarts@gmail.com
+                paloarts3@gmail.com
               </p>
             </div>
           </div>
@@ -237,7 +237,7 @@
             </h4>
             <div class="social_container">
               <div>
-                <a href="">
+                <a href="https://web.facebook.com/profile.php?id=61550964546060">
                   <img src="images/facebook-logo.png" alt="" />
                 </a>
               </div>
