--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ So, if you're ready to embark on a journey of self-discovery, innovation, and ar
             <div>
               <img src="images/envelope.png" alt="" />
               <p>
-                paloarts@gmail.com
+                paloarts3@gmail.com
               </p>
             </div>
           </div>
@@ -664,7 +664,7 @@ So, if you're ready to embark on a journey of self-discovery, innovation, and ar
             </h4>
             <div class="social_container">
               <div>
-                <a href="">
+                <a href="https://web.facebook.com/profile.php?id=61550964546060">
                   <img src="images/facebook-logo.png" alt="" />
                 </a>
               </div>
